2023-08-12T16:17:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5842305798 # 3618
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-08-12
* notice: query file size: 24333
* notice: accum prev / next / diff: re vi: 0 185 / 0 187 / +0 +2

2023-08-10T01:20:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5815809472 # 3602
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-08-10
* notice: query file size: 24509
* notice: accum prev / next / diff: re vi: 0 184 / 0 185 / +0 +1

2023-07-30T16:18:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5707214982 # 3540
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-07-30
* notice: query file size: 24499
* notice: accum prev / next / diff: re vi: 0 183 / 0 184 / +0 +1

2023-07-27T08:19:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5678208255 # 3520
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-07-27
* notice: query file size: 24319
* notice: accum prev / next / diff: re vi: 0 182 / 0 183 / +0 +1

2022-11-30T20:18:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3586780332 # 2153
* notice: query file size: 24419
* notice: accum prev / next / diff: re vi: 0 154 / 0 155 / +0 +1

2022-11-24T01:36:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3536982384 # 2112
* notice: query file size: 24437
* notice: accum prev / next / diff: re vi: 0 153 / 0 154 / +0 +1

2022-11-22T20:17:55Z: