@@ -1,3 +1,9 @@
+2023-08-12T20:13:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5843243559 # 3619
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-08-12
+* notice: query file size: 24343
+* notice: accum prev / next / diff: re vi: 0 187 / 0 191 / +0 +4
+
 2023-08-12T16:17:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5842305798 # 3618
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--doublecmd-stats/commits?branch=master&time_zone=utc&until=2023-08-12
